fixed bug related to LoginForm not showing up after signing out at HomePage

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,86 +1,3 @@
-.fade-in {
-    animation: heroAnim 0.75s ease-out 0s forwards;
-    animation-delay: 0s;
-}
-
-/* transform: translateY(5%); */
-
-@keyframes heroAnim {
-    0% {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-.fade1,
-.fade2,
-.fade3 {
-    opacity: 0;
-}
-
-.fade1 {
-    animation: hero1Anim 0.75s ease-out 0s forwards;
-    animation-delay: 0.1s;
-}
-
-/* transform: translateY(5%); */
-
-@keyframes hero1Anim {
-    0% {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-.fade2 {
-    animation: hero2Anim 0.75s ease-out 0s forwards;
-    animation-delay: 0.6s;
-}
-
-/* transform: translateY(5%); */
-
-@keyframes hero2Anim {
-    0% {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-.fade3 {
-    animation: hero3Anim 0.75s ease-out 0s forwards;
-    animation-delay: 1.1s;
-}
-
-/* transform: translateY(5%); */
-
-@keyframes hero3Anim {
-    0% {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-}
-
-
 .header-container {}
 
 .hero-section {
@@ -188,15 +105,6 @@
     object-fit: cover;
 }
 
-/* .hero-image:hover {
-    transform: scale(1.05);
-} */
-/* 
-font-family: 'Lexend', sans-serif;
-
-font-family: 'Syne', sans-serif; */
-
-
 .contact-container {
     color: white;
     padding: 10px;
@@ -209,12 +117,6 @@ font-family: 'Syne', sans-serif; */
     font-family: 'Syne', sans-serif;
 }
 
-/*
-.map-span {
-    margin-right: 5px;
-    margin-top: 5px;
-} */
-
 .contact-heading-container {
     display: flex;
     justify-content: center;
@@ -225,7 +127,6 @@ font-family: 'Syne', sans-serif; */
     margin-bottom: 5px;
     font-size: 1.8rem;
     font-weight: lighter;
-    /* font-family: 'Syne', sans-serif !important; */
 }
 
 .contact-container a {
@@ -241,6 +142,8 @@ font-family: 'Syne', sans-serif; */
     bottom: 0;
     background: linear-gradient(to top, rgba(0, 0, 0, 1.0) 15%, rgba(0, 0, 0, 0));
 }
+
+/* MEDIA SCREENS */
 
 @media screen and (min-width: 1000px) {
     .title {
